footer overlap fix

--- a/files/htdocs/sidebar.css
+++ b/files/htdocs/sidebar.css
@@ -7,11 +7,6 @@
 	background:#ffffff;
 }
 
-.body-content {
-	margin:auto;
-	overflow: auto;
-}
-
 .login {
 	margin:10px 10% auto 10%;
 }
